2013-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.extensions.R (test.extension): Comment-out
	test for setExtension against enum, at least for now

	* vignettes/RProtoBuf/RProtoBuf.Rnw: Added Murray to Authors, at last
	* vignettes/RProtoBuf-unitTests.Rnw: Idem
	* vignettes/RProtoBuf-quickref/RProtoBuf-quickref.Rnw: Idem

2013-07-13  Murray Stokely  <murray@FreeBSD.org>

	* inst/NEWS.Rd: Summarize new features since the last CRAN release
          last year.
	* DESCRIPTION: Increment version to 0.3.

2013-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* man/Message-class.Rd: Added \alias entries for getExtension and
	setExtension
	* DESCRIPTION: Incremented Version to separate current test builds
	from previous release
	* DESCRIPTION: Removed 'MinimumLibProtoVersion: 2002000' which we
	no longer need as that version of Protocol Buffers was released a
	rather long time ago
	* R/zzz.R: Check for minimal version is now commented-out

2013-07-12  Murray Stokely  <murray@FreeBSD.org>

	* src/extensions.cpp: Replace custom extractor and mutator with
	  call to existing functions in mutators.cpp and extractors.cpp that
	  can be used for extensions and any other field type.
	* src/extensions.R: Idem
	* vignettes/RProtoBuf/RProtoBuf.Rnw: Document getExtension,
	  setExtension methods.
	* man/Message-class.Rd: Idem
	* src/rprotobuf.h: Remove unused desc argument to
	  extractFieldAsSEXP.
	* src/extractors.cpp: Idem
	* inst/unitTests/runit.extensions.R: Add additional tests for
	  nested enum and message type extensions.

2013-07-11  Murray Stokely  <murray@FreeBSD.org>

	* R/extensions.R: Implement getExtension, setExtension methods.
	* src/extensions.cpp: Implement getExtension, setExtension.
	* R/set.R: Add a TODO noting these functions are undocumented.
	* R/00classes.R: Add setExtension, getExtension extractors for
	  message objects.
	* R/completion.R: Add setExtension, getExtension.
	* NAMESPACE: Add setExtension, getExtension.